# hs-aws-dynamodb-streams

./: README.md  aws-dynamodb-streams.cabal
src/Aws/DynamoDb/: Streams.hs
src/Aws/DynamoDb/Streams/: Core.hs  Types.hs
src/Aws/DynamoDb/Streams/Commands/: DescribeStream.hs  GetRecords.hs  GetShardIterator.hs  ListStreams.hs
