name:                aws-dynamodb-streams
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Jon Sterling & Lars Kuhtz
maintainer:          jon@jonmsterling.com
copyright:           Copyright (c) 2013-2014 PivotCloud, Inc.
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Aws.DynamoDb.Streams.Core,
                       Aws.DynamoDb.Streams.Types
  build-depends:       base >=4.7 && <4.8,
                       base-unicode-symbols,
                       attoparsec >=0.12.0.0,
                       aeson >=0.8.0.0,
                       aws >=0.10.5,
                       aws-general >=0.1,
                       blaze-builder >=0.3.3.4,
                       base64-bytestring >=1.0.0.0,
                       bytestring >=0.10.4.0,
                       containers >=0.5.5.0,
                       conduit >=1.2.0,
                       conduit-extra >=1.1.4,
                       http-types >=0.0.8.5,
                       http-conduit >=2.1.5,
                       mtl >=2.1,
                       parsers >=0.11,
                       profunctors >=4.2,
                       resourcet >=1.1.3,
                       scientific >=0.3.3.2,
                       text >=1.2.0.0
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
